--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,15 +1,3 @@
-
-
-<main class="main">
-  <div class="content">
-    <div class="left-side">
-
-      <h1>Hello World!</h1>
-  
-    </div>
-  </div>
-</main>
-
-
-
+<app-header></app-header>
+<div style="height: 75px;"></div>
 <router-outlet />
