--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -19,11 +19,12 @@
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="" role="button" data-bs-toggle="dropdown" aria-expanded="false">Book 2: Starships and Interstellar Travel</a>
                         <div class="dropdown-menu">
-                            <a class="dropdown-item" href="off-world-travel.html">Chapter 6: Off-World Travel</a>
-                            <a class="dropdown-item" href="trade-and-commerce.html">Chapter 7: Trade and Commerce</a>
-                            <a class="dropdown-item" href="ship-design-and-construction.html">Chapter 8: Ship Design and Construction</a>
-                            <a class="dropdown-item" href="common-vessels.html">Chapter 9: Common Vessels</a>
-                            <a class="dropdown-item" href="space-combat.html">Chapter 10: Space Combat</a>
+                            <a class="dropdown-item"  routerLink="/offworld" routerLinkActive="active" ariaCurrentWhenActive="page">Chapter 6: Off-World Travel</a>
+                            <a class="dropdown-item"  routerLink="/tradecommerce" routerLinkActive="active" ariaCurrentWhenActive="page">Chapter 7: Trade and Commerce</a>
+                            <a class="dropdown-item"  routerLink="/shipdesign" routerLinkActive="active" ariaCurrentWhenActive="page">Chapter 8: Ship Design and Construction</a>
+                            <a class="dropdown-item"  routerLink="/commonvessels" routerLinkActive="active" ariaCurrentWhenActive="page">Chapter 9: Common Vessels</a>
+                            <a class="dropdown-item"  routerLink="/spacecombat" routerLinkActive="active" ariaCurrentWhenActive="page">Chapter 10: Space Combat</a>
+
                         </div>
                     </li>
                     <li class="nav-item dropdown">
