--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -30,12 +30,12 @@
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="" role="button" data-bs-toggle="dropdown" aria-expanded="false">Book 3: Referees</a>
                         <div class="dropdown-menu">
-                            <a class="dropdown-item" href="environments-and-hazards.html">Chapter 11: Environments and Hazards</a>
-                            <a class="dropdown-item" href="worlds.html">Chapter 12: Worlds</a>
-                            <a class="dropdown-item" href="planetary-wilderness-encounters.html">Chapter 13: Planetary Wilderness Encounters</a>
-                            <a class="dropdown-item" href="social-encounters.html">Chapter 14: Social Encounters</a>
-                            <a class="dropdown-item" href="starship-encounters.html">Chapter 15: Starship Encounters</a>
-                            <a class="dropdown-item" href="refereeing-the-game.html">Chapter 16: Refereeing the Game</a>
+                            <a class="dropdown-item"  routerLink="/environments" routerLinkActive="active" ariaCurrentWhenActive="page">Chapter 11: Environments and Hazards</a>
+                            <a class="dropdown-item"  routerLink="/worlds" routerLinkActive="active" ariaCurrentWhenActive="page">Chapter 12: Worlds</a>
+                            <a class="dropdown-item"  routerLink="/planetary" routerLinkActive="active" ariaCurrentWhenActive="page">Chapter 13: Planetary Wilderness Encounters</a>
+                            <a class="dropdown-item"  routerLink="/social" routerLinkActive="active" ariaCurrentWhenActive="page">Chapter 14: Social Encounters</a>
+                            <a class="dropdown-item"  routerLink="/starship" routerLinkActive="active" ariaCurrentWhenActive="page">Chapter 15: Starship Encounters</a>
+                            <a class="dropdown-item"  routerLink="/refereeing" routerLinkActive="active" ariaCurrentWhenActive="page">Chapter 16: Refereeing the Game</a>
                             <a class="dropdown-item"  routerLink="/adventures" routerLinkActive="active" ariaCurrentWhenActive="page">Chapter 17: Adventures</a>
                         </div>
                     </li>
