--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -43,13 +43,13 @@
                         <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="" role="button" data-bs-toggle="dropdown" aria-expanded="false">Vehicle Design System</a>
                         <div class="dropdown-menu">
                             <a class="dropdown-item" href="vds-introduction.html">Introduction</a>
-                            <a class="dropdown-item" href="vehicle-design.html">Chapter 1: Vehicle Design</a>
-                            <a class="dropdown-item"  routerLink="/aircraft" routerLinkActive="active" ariaCurrentWhenActive="page">Chapter 2: Common Aircraft</a>
-                            <a class="dropdown-item" href="common-grav-vehicles.html">Chapter 3: Common Grav Vehicles</a>
-                            <a class="dropdown-item" href="common-ground-vehicles.html">Chapter 4: Common Ground Vehicles</a>
-                            <a class="dropdown-item" href="common-watercraft.html">Chapter 5: Common Watercraft</a>
-                            <a class="dropdown-item" href="uncommon-vehicles.html">Chapter 6: Uncommon Vehicles</a>
-                            <a class="dropdown-item" href="updated-common-vehicles-table.html">Appendix A: Updated Common Vehicles Table</a>
+                            <a class="dropdown-item"  routerLink="/vehicledesign" routerLinkActive="active" ariaCurrentWhenActive="page">Chapter 1: Vehicle Design</a>
+                            <a class="dropdown-item"  routerLink="/aircraft" routerLinkActive="active" ariaCurrentWhenActive="page">Chapter 2: Common Aircraft</a>                            
+                            <a class="dropdown-item"  routerLink="/commongrav" routerLinkActive="active" ariaCurrentWhenActive="page">Chapter 3: Common Grav Vehicles</a>
+                            <a class="dropdown-item"  routerLink="/commonground" routerLinkActive="active" ariaCurrentWhenActive="page">Chapter 4: Common Ground Vehicles</a>
+                            <a class="dropdown-item"  routerLink="/commonwater" routerLinkActive="active" ariaCurrentWhenActive="page">Chapter 5: Common Watercraft</a>
+                            <a class="dropdown-item"  routerLink="/uncommonvehicle" routerLinkActive="active" ariaCurrentWhenActive="page">Chapter 6: Uncommon Vehicles</a>
+                            <a class="dropdown-item"  routerLink="/appendixa" routerLinkActive="active" ariaCurrentWhenActive="page">Appendix A: Updated Common Vehicles Table</a>
                         </div>
                     </li>
                     <li class="nav-item dropdown">
