--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -42,7 +42,7 @@
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="" role="button" data-bs-toggle="dropdown" aria-expanded="false">Vehicle Design System</a>
                         <div class="dropdown-menu">
-                            <a class="dropdown-item" href="vds-introduction.html">Introduction</a>
+                            <a class="dropdown-item"  routerLink="/vdsintro" routerLinkActive="active" ariaCurrentWhenActive="page">Introduction</a>                            
                             <a class="dropdown-item"  routerLink="/vehicledesign" routerLinkActive="active" ariaCurrentWhenActive="page">Chapter 1: Vehicle Design</a>
                             <a class="dropdown-item"  routerLink="/aircraft" routerLinkActive="active" ariaCurrentWhenActive="page">Chapter 2: Common Aircraft</a>                            
                             <a class="dropdown-item"  routerLink="/commongrav" routerLinkActive="active" ariaCurrentWhenActive="page">Chapter 3: Common Grav Vehicles</a>
@@ -55,11 +55,11 @@
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="" role="button" data-bs-toggle="dropdown" aria-expanded="false">Tools</a>
                         <div class="dropdown-menu">
-                            <a class="dropdown-item" href="tools/subsector-generator.html">Subsector Generator</a>
+                            <a class="dropdown-item"  routerLink="/subsector" routerLinkActive="active" ariaCurrentWhenActive="page">Subsector Generator</a>
                         </div>
                     </li>
                     <li class="nav-item active">
-                        <a class="nav-link active" href="legal.html">Legal</a>
+                        <a routerLink="/legal" routerLinkActive="active" ariaCurrentWhenActive="page">Legal</a>
                     </li>
                 </ul>
 
